--- a/styles/style.css
+++ b/styles/style.css
@@ -931,12 +931,25 @@ nav {
   background: #e6e6e6;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .portfolio-butt {
+    width: 237px;
+    padding: 10px 0;
+  }
+}
 
 .portfolio-butt:hover,
 .portfolio-butt:focus {
   padding: 10px 17px;
   color: var(--no-color);
   background: var(--accent-color-two);
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-butt:hover,
+  .portfolio-butt:focus {
+    width: 236px;
+    padding: 10px 0;
+  }
 }
 
 .radio-portfolio-box {
@@ -2109,7 +2122,7 @@ nav {
 @media screen and (min-width: 1200px) {
   .respons__video {
     width: 100%;
-    height: auto;
+    height: 294px;
   }
 }
 
@@ -2130,6 +2143,59 @@ nav {
   .respons .form-box {
     display: none;
   }
+}
+
+.our-team {
+  padding: 71px 0;
+}
+
+.our-team__title {
+  text-align: center;
+}
+
+.our-team__list {
+  display: flex;
+  flex-direction: row;
+  overflow-y: scroll;
+  width: 414px;
+}
+
+.info-of-master {
+  margin-top: 53px;
+}
+
+.master-name {
+  font-family: var(--font-three);
+  font-weight: 700;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: var(--accent-color-one);
+}
+
+.description-master {
+  font-family: var(--font-three);
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--text-color);
+}
+
+.description-masters-work,
+.info-of-master__list .item {
+  font-family: var(--font-one);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 129%;
+  color: var(--text-color);
+}
+
+.info-of-master__list {
+  margin-top: 15px;
+  padding-left: 15px;
+  list-style: disc;
+}
+
+.our-team .form-box {
+  margin-top: 32px;
 }
 
 .footer {
